# MediaPlayer-Qt-C

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
